# QDICTION

./: MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  run.py  setup.py
qdiction/: __main__.py  __main__.py~  dict_project.py
src/qdiction/: __main__.py  dict_project.py  dictionary_auto_gen.py
