[build-system]
requires = ["setuptools>=61.0",
            "nltk", 
            "PyQt6"]
build-backend = "setuptools.build_meta"
[project]
name = "QDiction" 
version = "2.0.1"
authors = [
  { name="ro_alli", email="ro_alli@protonmail.com" },
]
description = "A dictionary application based on wordnet and NLTK"
readme = "README.md"
requires-python = ">=3.6"
[tool.poetry]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPL-3.0-only",
    "Operating System :: OS Independent" 
]
[project-scripts]
qdiction="qdiction:__main__.py"


